--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.3",
+    "moment-timezone": "^0.5.34",
     "nodemon": "^2.0.15"
   }
 }
